# claws-mail

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog-gtk2  ChangeLog-gtk2.claws  ChangeLog-gtk2.jp  ChangeLog.claws  ChangeLog.claws.w32  ChangeLog.jp  Changes-w32.jp.txt  INSTALL  INSTALL.jp  MAKE-w32.jp.txt  Makefile.am  Makefile.in  NEWS  PATCHSETS  PATCHSETS.w32  README  README-w32.txt  README.claws  README.jp  RELEASE_NOTES  RELEASE_NOTES.claws  TODO  TODO-gtk2  TODO-gtk2.jp  TODO.claws  TODO.jp  acconfig.h  aclocal.m4  autogen.sh  backport.sh  claws-features.h.in  claws-mail.appdata.xml  claws-mail.appdata.xml.in  claws-mail.desktop  claws-mail.desktop.in  (+17 more)
ac/: Makefile.am  Makefile.in  aspell.m4  check-type.m4  gnupg-check-typedef.m4  openssl.m4  pspell.m4  spamassassin.m4  sv-check-type.m4
ac/missing/: imlib.m4
appdata/: Makefile.am  claws-mail-acpi_notifier.metainfo.xml.in  claws-mail-address_keeper.metainfo.xml.in  claws-mail-archive.metainfo.xml.in  claws-mail-att_remover.metainfo.xml.in  claws-mail-attachwarner.metainfo.xml.in  claws-mail-bogofilter.metainfo.xml.in  claws-mail-bsfilter.metainfo.xml.in  claws-mail-clamd.metainfo.xml.in  claws-mail-fancy.metainfo.xml.in  claws-mail-fetchinfo.metainfo.xml.in  claws-mail-gdata.metainfo.xml.in  claws-mail-geolocation.metainfo.xml.in  claws-mail-libravatar.metainfo.xml.in  claws-mail-mailmbox.metainfo.xml.in  claws-mail-managesieve.metainfo.xml.in  claws-mail-newmail.metainfo.xml.in  claws-mail-notification.metainfo.xml.in  claws-mail-pdf_viewer.metainfo.xml.in  claws-mail-perl.metainfo.xml.in  claws-mail-pgpinline.metainfo.xml.in  claws-mail-pgpmime.metainfo.xml.in  claws-mail-python.metainfo.xml.in  claws-mail-rssyl.metainfo.xml.in  claws-mail-smime.metainfo.xml.in  claws-mail-spam_report.metainfo.xml.in  claws-mail-spamassassin.metainfo.xml.in  claws-mail-tnef_parse.metainfo.xml.in  claws-mail-vcalendar.metainfo.xml.in  claws-mail.appdata.xml.in
libkcc/: Makefile.am  Makefile.in  Makefile.std  README  ROUTINE  buffer.c  check.c  compare.c  dec.c  euc.c  filter.c  getstr.c  guess.c  jis.c  kcc.h  libkcc.h  out.c  outchar.c  outsjis.c  setfunc.c  showcode.c  sjis.c  test.c  test_check.c  test_file  test_file.sjis  test_filter.c  testfile
src/: .cvsignore  Makefile.am  Makefile.in  about.c  account.c  account.h  action.c  action.h  adbookbase.h  addr_compl.c  addr_compl.h  addrbook.c  addrbook.h  addrcache.c  addrcache.h  addrcindex.c  addrcindex.h  addrclip.c  addrclip.h  addrcustomattr.c  addrcustomattr.h  addrdefs.h  addrduplicates.c  addrduplicates.h  addressadd.c  addressadd.h  addressbook-dbus.c  addressbook-dbus.h  addressbook.c  addressbook.h  addressbook_foldersel.c  addressbook_foldersel.h  addressitem.h  addrgather.c  addrgather.h  addrharvest.c  addrharvest.h  addrindex.c  addrindex.h  addritem.c  (+427 more)
src/common/: .cvsignore  Makefile.am  base64.c  base64.h  claws.c  claws.h  claws_io.c  claws_io.h  codeconv.c  codeconv.h  defs.h  file-utils.c  file-utils.h  fnmatch.c  fnmatch.h  fnmatch_loop.c  hooks.c  hooks.h  intl.h  log.c  log.h  md5.c  md5.h  mgutils.c  mgutils.h  nntp.c  nntp.h  partial_download.c  partial_download.h  passcrypt.c  passcrypt.h.in  pkcs5_pbkdf2.c  pkcs5_pbkdf2.h  plugin.c  plugin.h  prefs.c  prefs.h  progressindicator.c  progressindicator.h  proxy.c  (+49 more)
src/common/tests/: Makefile.am  (+9 more)
src/etpan/: Makefile.am  etpan-errors.h  etpan-log.c  etpan-log.h  etpan-ssl.c  etpan-ssl.h  etpan-thread-manager-types.h  etpan-thread-manager.c  etpan-thread-manager.h  imap-thread.c  imap-thread.h  nntp-thread.c  nntp-thread.h
src/gtk/: .cvsignore  Makefile.am  about.c  about.h  authors.h  colorlabel.c  colorlabel.h  colorsel.c  colorsel.h  combobox.c  combobox.h  description_window.c  description_window.h  filesel.c  filesel.h  foldersort.c  foldersort.glade  foldersort.h  gtkaspell.c  gtkaspell.h  gtkcmclist.c  gtkcmclist.h  gtkcmctree.c  gtkcmctree.h  gtkcmoptionmenu.c  gtkcmoptionmenu.h  gtksctree.c  gtksctree.h  gtkshruler.c  gtkshruler.h  gtksourceprintjob.c  gtksourceprintjob.h  gtkstext.c  gtkstext.h  gtkunit.c  gtkutils.c  gtkutils.h  gtkvscrollbutton.c  gtkvscrollbutton.h  headers.h  (+26 more)
src/pixmaps/: active.xpm  address_book.xpm  check_spelling.xpm  checkbox_off.xpm  checkbox_on.xpm  claws-mail_icon.xpm  claws_mail_icon_64.xpm  close.xpm  complete.xpm  continue.xpm  delete_dup.xpm  dir-close.xpm  dir-open.xpm  dir_noselect_open_mark.xpm  dir_subs_open_mark.xpm  doc_index_close.xpm  down_arrow.xpm  drafts_close.xpm  drafts_close_mark.xpm  drafts_open.xpm  drafts_open_mark.xpm  error.xpm  exec.xpm  folder.xpm  group.xpm  ham_btn.xpm  ignorethread.xpm  inactive.xpm  inbox_hrm.xpm  inbox_hrm_mark.xpm  inbox_mark.xpm  insert_file.xpm  jpilot.xpm  linewrapcurrent.xpm  mail.xpm  mail_compose.xpm  mail_forward.xpm  mail_receive.xpm  mail_receive_all.xpm  mail_reply.xpm  (+92 more)
src/plugins/: Makefile.am  win_pgpcore.mk  win_plugin.mk
src/tests/: Makefile.am  entity_test.c  mock_debug_print.h
tools/: Makefile.am  OOo2claws-mail.pl  OOo2sylpheed.pl  README  README.sylprint  acroread2claws-mail.pl  acroread2sylpheed.pl  alternative-tlds.txt  asus_mailled.sh  calypso_convert.pl  check-appstream.sh  claws-mail-compose-insert-files.pl  claws.get.tlds.pl  claws.i18n.status.pl  cm-break.pl  cm-reparent.pl  convert_mbox.pl  convert_mbox.sh  csv2addressbook.pl  ddg_search.pl  eud2gc.py  filter_conv.pl  filter_conv_new.pl  fix_date.sh  freshmeat_search.pl  gitlog2changelog.py  google_search.pl  gpg-sign  gpg-sign-syl  kmail-mailbox2claws-mail.pl  kmail2claws-mail.pl  kmail2claws-mail_v2.pl  kmail2sylpheed.pl  kmail2sylpheed_v2.pl  launch_firebird  launch_phoenix  ldif-to-xml.py  maildir2claws-mail.pl  maildir2sylpheed.pl  mairix.sh  (+23 more)
tools/bash_completion/: README
tools/jhbuild/: README  claws-mail.modules  sample.jhbuildrc-claws-mail
tools/kdeservicemenu/: README  claws-mail-kdeservicemenu.pl  install.sh  sylpheed-kdeservicemenu.pl  template_claws-mail-attach-files.desktop  template_claws-mail-compress-attach.desktop  template_sylpheed-attach-files.desktop  template_sylpheed-compress-attach.desktop
(+1020 files in other folders)
